# design-patterns

./: .gitignore  README.md
AbstractFactory-UIToolKit/: CMakeLists.txt
AbstractFactory-UIToolKit/include/: UIFactory.h  UIToolkit.h  macFactory.h  macToolkit.h  windowsFactory.h  windowsToolkit.h
AbstractFactory-UIToolKit/src/: UIFactory.cc  main.cc
FactoryMethod-FileParser/: CMakeLists.txt
FactoryMethod-FileParser/data/: config.json  log.xml
FactoryMethod-FileParser/include/: jsonParser.h  parser.h  parserFactory.h  xmlParser.h
FactoryMethod-FileParser/src/: jsonParser.cc  main.cc  parserFactory.cc  xmlParser.cc
singlenton-logger/: logger.cc  logger.h  main.cc  my_logger
